[package]
name = "tower-def"
version = "0.1.0"
authors = ["Robert Bartlensky"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", revision = "335b7def48ac073ea0bb0fff781935d668faa737"}
tiled = "0.9.2"
rand = "0.7.3"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
